# zettlr_rag

./: .gitignore  README.md  pyproject.toml  query.py
src/zettlr_rag/: file_watcher.py  main.py  rag_setup.py
src/zettlr_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_file_watcher.py  test_metadata_persistence.py  test_rag_setup.py  test_smart_sync.py
